<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_release"
                    android:textSize="18sp"
                    android:textColor="#D81B60"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="January 17, 2018"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_release_date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_language"
                    android:textSize="18sp"
                    android:textColor="#D81B60"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="EN"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_language"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_rating"
                    android:textSize="18sp"
                    android:textColor="#D81B60"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="5.8"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_rating"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_genre"
                    android:textSize="18sp"
                    android:textColor="#D81B60"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Loading ..."
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_genre"/>

            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_foreground"
                    android:id="@+id/iv_movie_image"/>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_overview_desc"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:id="@+id/tv_overview" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
